// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginInfo should not show the view permissions button with text less than 50 chars 1`] = `
<DocumentFragment>
  <div
    class="mt-8"
  >
    <p
      class="font-bold"
    >
      Permissions
    </p>
    <div
      class="inline-flex items-baseline mt-3 space-x-2"
    >
      <p
        class="mt-3 text-theme-secondary-600"
        data-testid="plugin-info__permissions"
      >
        <span
          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
          data-testid="TruncateEnd"
        >
          Allows access to the Desktop Wallet events
        </span>
      </p>
    </div>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should open and close the plugin permissions modal 1`] = `
<DocumentFragment>
  <div
    class="mt-8"
  >
    <p
      class="font-bold"
    >
      Permissions
    </p>
    <div
      class="inline-flex items-baseline mt-3 space-x-2"
    >
      <p
        class="mt-3 text-theme-secondary-600"
        data-testid="plugin-info__permissions"
      >
        <span
          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
          data-testid="TruncateEnd"
        >
          Allows access to the Desktop Wallet events, Allows…
        </span>
      </p>
      <button
        class="link"
        data-testid="plugin-info__view-permissions"
      >
        View All
      </button>
    </div>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should render properly 1`] = `
<DocumentFragment>
  <div>
    <p
      class="font-bold"
    >
      About
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__about"
    >
      Testing About text content
    </p>
  </div>
  <div
    class="mt-8"
  >
    <p
      class="font-bold"
    >
      Permissions
    </p>
    <div
      class="inline-flex items-baseline mt-3 space-x-2"
    >
      <p
        class="mt-3 text-theme-secondary-600"
        data-testid="plugin-info__permissions"
      >
        <span
          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
          data-testid="TruncateEnd"
        >
          Allows access to the currently active profile, All…
        </span>
      </p>
      <button
        class="link"
        data-testid="plugin-info__view-permissions"
      >
        View All
      </button>
    </div>
  </div>
  <div
    class="relative mt-8"
  >
    <p
      class="font-bold"
    >
      Screenshots
    </p>
    <div
      class="flex absolute top-0 right-0 pr-4 space-x-3 screenshots-pagination swiper-pagination-clickable swiper-pagination-bullets"
      data-testid="plugin-info__screenshots--pagination"
    />
    <div
      class="mt-4"
    >
      <div
        class="relative"
      >
        <div
          class="overflow-hidden -mb-8 list-none px-4.5 -mx-4.5 slide-container swiper-container-initialized swiper-container-horizontal"
          style="height: 232px;"
        >
          <div
            class="h-full swiper-wrapper important:z-0"
            style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
          >
            <div
              class="swiper-slide"
              style="height: 200px; margin-top: 0px;"
            >
              <img
                alt="Screenshot"
                class="object-contain overflow-hidden w-full max-h-44 rounded-lg bg-theme-secondary-200"
                data-testid="plugin-info__screenshot"
                src="https://ark.io/screenshot.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should render with minimum version 1`] = `
<div>
  <div
    class="mt-8"
  >
    <p
      class="font-bold"
    >
      Requirements
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__mininum-version"
    >
      <span>
        Desktop Wallet Version
         v
        3.0.1
        +
      </span>
    </p>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginInfo should render without permissions 1`] = `
<DocumentFragment>
  <div>
    <p
      class="font-bold"
    >
      About
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__about"
    >
      Testing About text content
    </p>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
